Small addition to our page cntent

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
     <title>Hello Coursera</title>
 </head>
 <body>
-    <h1>Hello Coursera start</h1>
+    <h1>Hello Coursera start. It's a Great course</h1>
 </body>
 </html>
