--- a/site/index.html
+++ b/site/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Hello Coursera start. It's a Great course</h1>
+
+<p>This is the First Paragraph in this course.</p>
 </body>
 </html>
