Lecture05 Selectors updated and mycv/index.html updated files added

--- a/site/Lecture05/div-and-span.html
+++ b/site/Lecture05/div-and-span.html
@@ -6,6 +6,6 @@
     <title>Lecture Five(5)</title>
 </head>
 <body>
-    <p>This is all in Lecture 5</p>
+    <p>This is all in Lecture</p>
 </body>
 </html>
