--- a/site/mycv/index.html
+++ b/site/mycv/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>ADEPENTANE CV</title>
 
-	<link rel="stylesheet" media="screen" href="style.css?v=8may2013">
+	<link rel="stylesheet" media="screen" href="style.css">
 	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.csszengarden.com/zengarden.xml">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,32 +20,6 @@
 
 <!--
 
-
-
-	View source is a feature, not a bug. Thanks for your curiosity and
-	interest in participating!
-
-	Here are the submission guidelines for the new and improved csszengarden.com:
-
-	- CSS3? Of course! Prefix for ALL browsers where necessary.
-	- go responsive; test your layout at multiple screen sizes.
-	- your browser testing baseline: IE9+, recent Chrome/Firefox/Safari, and iOS/Android
-	- Graceful degradation is acceptable, and in fact highly encouraged.
-	- use classes for styling. Don't use ids.
-	- web fonts are cool, just make sure you have a license to share the files. Hosted 
-	  services that are applied via the CSS file (ie. Google Fonts) will work fine, but
-	  most that require custom HTML won't. TypeKit is supported, see the readme on this
-	  page for usage instructions: https://github.com/mezzoblue/csszengarden.com/
-
-	And a few tips on building your CSS file:
-
-	- use :first-child, :last-child and :nth-child to get at non-classed elements
-	- use ::before and ::after to create pseudo-elements for extra styling
-	- use multiple background images to apply as many as you need to any element
-	- use the Kellum Method for image replacement, if still needed. http://goo.gl/GXxdI
-	- don't rely on the extra divs at the bottom. Use ::before and ::after instead.
-
-		
 -->
 
 <body id="css-zen-garden">
@@ -53,13 +27,15 @@
 
 	<section class="intro" id="zen-intro">
 		<header role="banner">
-			<h1>CSS Zen Garden</h1>
-			<h2>The Beauty of <abbr title="Cascading Style Sheets">CSS</abbr> Design</h2>
+			<h1>Adekunle Henry Ogunlade</h1>
+			<h2>Welcome to <abbr title="Cascading Style Sheets">Adekunle Henry Ogunlade</abbr> Profile</h2>
 		</header>
 
 		<div class="summary" id="zen-summary" role="article">
-			<p>A demonstration of what can be accomplished through <abbr title="Cascading Style Sheets">CSS</abbr>-based design. Select any style sheet from the list to load it into this page.</p>
-			<p>Download the example <a href="/examples/index" title="This page's source HTML code, not to be modified.">html file</a> and <a href="/examples/style.css" title="This page's sample CSS, the file you may modify.">css file</a></p>
+			<p>A professional in the Pension Industry with over 4 years working experience as a web developer/ programmer <abbr title="Cascading Style Sheets">CSS</abbr>, data analyst, software tester with track record of high-level commitment and passion to accomplish both personal and organizational set target.
+
+				<!--<a href="/examples/index" title="This page's source HTML code, not to be modified.">html file</a> and <a href="/examples/style.css" title="This page's 
+				sample CSS, the file you may modify.">css file</a>--></p>
 		</div>
 
 		<div class="preamble" id="zen-preamble" role="article">
@@ -81,7 +57,7 @@
 			<h3>Participation</h3>
 			<p>Strong visual design has always been our focus. You are modifying this page, so strong <abbr title="Cascading Style Sheets">CSS</abbr> skills are necessary too, but the example files are commented well enough that even <abbr title="Cascading Style Sheets">CSS</abbr> novices can use them as starting points. Please see the <a href="http://www.mezzoblue.com/zengarden/resources/" title="A listing of CSS-related resources"><abbr title="Cascading Style Sheets">CSS</abbr> Resource Guide</a> for advanced tutorials and tips on working with <abbr title="Cascading Style Sheets">CSS</abbr>.</p>
 			<p>You may modify the style sheet in any way you wish, but not the <abbr title="HyperText Markup Language">HTML</abbr>. This may seem daunting at first if you&#8217;ve never worked this way before, but follow the listed links to learn more, and use the sample files as a guide.</p>
-			<p>Download the sample <a href="/examples/index" title="This page's source HTML code, not to be modified.">HTML</a> and <a href="/examples/style.css" title="This page's sample CSS, the file you may modify.">CSS</a> to work on a copy locally. Once you have completed your masterpiece (and please, don&#8217;t submit half-finished work) upload your <abbr title="Cascading Style Sheets">CSS</abbr> file to a web server under your control. <a href="http://www.mezzoblue.com/zengarden/submit/" title="Use the contact form to send us your CSS file">Send us a link</a> to an archive of that file and all associated assets, and if we choose to use it we will download it and place it on our server.</p>
+			<p>Download the sample <a href="http://www.csszengarden.com/examples/index" title="This page's source HTML code, not to be modified.">HTML</a> and <a href="http://www.csszengarden.com/examples/style.css" title="This page's sample CSS, the file you may modify.">CSS</a> to work on a copy locally. Once you have completed your masterpiece (and please, don&#8217;t submit half-finished work) upload your <abbr title="Cascading Style Sheets">CSS</abbr> file to a web server under your control. <a href="http://www.mezzoblue.com/zengarden/submit/" title="Use the contact form to send us your CSS file">Send us a link</a> to an archive of that file and all associated assets, and if we choose to use it we will download it and place it on our server.</p>
 		</div>
 
 		<div class="benefits" id="zen-benefits" role="article">
@@ -113,13 +89,13 @@
 		<div class="wrapper">
 
 			<div class="design-selection" id="design-selection">
-				<h3 class="select">Select a Design:</h3>
+				<h3 class="select">Competencies</h3>
 				<nav role="navigation">
 					<ul>
 					<li>
-						<a href="/221/" class="design-name">Mid Century Modern</a> by						<a href="http://andrewlohman.com/" class="designer-name">Andrew Lohman</a>
+						<a href="/221/" class="design-name">Web Design</a> by						<a href="http://andrewlohman.com/" class="designer-name">Andrew Lohman</a>
 					</li>					<li>
-						<a href="/220/" class="design-name">Garments</a> by						<a href="http://danielmall.com/" class="designer-name">Dan Mall</a>
+						<a href="/220/" class="design-name">Data Analytics</a> by						<a href="http://danielmall.com/" class="designer-name">Dan Mall</a>
 					</li>					<li>
 						<a href="/219/" class="design-name">Steel</a> by						<a href="http://steffen-knoeller.de" class="designer-name">Steffen Knoeller</a>
 					</li>					<li>
@@ -141,7 +117,7 @@
 				<nav role="navigation">
 					<ul>
 						<li class="next">
-							<a href="/214/page1">
+							<a href="http://www.csszengarden.com/214/page1">
 								Next Designs <span class="indicator">&rsaquo;</span>
 							</a>
 						</li>
